--- a/templates/index.html
+++ b/templates/index.html
@@ -4,29 +4,32 @@
 {% block titulo %}Index{% endblock titulo %}
 
 {% block contenido %}
-<h2>Pagina Index</h2>
-
 <section class="py-5">
     <div class="container px-5">
-        <h1 class="fw-bolder fs-5 mb-4">Blog | Cocina</h1>
+        <h1 class="fw-bolder fs-5 mb-4"></h1>
         <div class="card border-0 shadow rounded-3 overflow-hidden">
             <div class="card-body p-0">
+                
                 <div class="row gx-0">
                     <div class="col-lg-6 col-xl-5 py-lg-5">
                         <div class="p-4 p-md-5">
-                            <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                            <div class="h2 fw-bolder">Article heading goes here</div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique delectus ab
-                                doloremque, qui doloribus ea officiis...</p>
-                            <a class="stretched-link text-decoration-none" href="#!">
-                                Read more
-                                <i class="bi bi-arrow-right"></i>
-                            </a>
+
+                            <div class="h2 fw-bolder">¡Bienvenido a Delicias Culinarias!</div>
+                            <p>
+                                En Delicias Culinarias, nuestro objetivo es llevar el apasionante mundo de la cocina
+                                directamente a tu hogar. Sumérgete
+                                en un viaje gastronómico lleno de sabores, aromas y recetas que despertarán tu
+                                creatividad culinaria y deleitarán tu
+                                paladar. Nuestro blog está diseñado para todos los amantes de la cocina, desde
+                                principiantes entusiastas hasta expertos
+                                chefs, brindando una amplia variedad de contenido para inspirar, educar y, sobre todo,
+                                compartir el amor por la comida.</p>
+
                         </div>
                     </div>
                     <div class="col-lg-6 col-xl-7">
-                        <div class="bg-featured-blog"
-                            style="background-image: url('https://dummyimage.com/700x350/343a40/6c757d')"></div>
+                        <img class="card-img-top" src="{% static 'img/img1.jpg' %}" alt="" />                       
+
                     </div>
                 </div>
             </div>
@@ -37,94 +40,111 @@
 <!-- Blog seccion previa-->
 <section class="py-5">
     <div class="container px-5">
-        <h2 class="fw-bolder fs-5 mb-4">Featured Stories</h2>
+        <h2 class="fw-bolder fs-5 mb-4">Explora Nuestro Contenido:</h2>
         <div class="row gx-5">
             <div class="col-lg-4 mb-5">
                 <div class="card h-100 shadow border-0">
-                    <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..." />
+                    <img class="card-img-top" src="{% static 'img/img2.jpg' %}" alt="..." />
                     <div class="card-body p-4">
-                        <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
                         <a class="text-decoration-none link-dark stretched-link" href="#!">
-                            <div class="h5 card-title mb-3">Blog post title</div>
+                            <div class="h5 card-title mb-3">Recetas para Todos los Gustos:</div>
                         </a>
-                        <p class="card-text mb-0">Some quick example text to build on the card title and make up the
-                            bulk of the card's content.</p>
+                        <p class="card-text mb-0">Descubre recetas exquisitas para cualquier ocasión, desde comidas
+                            familiares hasta cenas románticas y platos para
+                            sorprender a tus invitados. Nuestra colección incluye opciones para vegetarianos, veganos y
+                            aquellos con preferencias
+                            alimentarias específicas.</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-lg-4 mb-5">
+                <div class="card h-100 shadow border-0">
+                    <img class="card-img-top" src="{% static 'img/img3.jpg' %}" alt="..." />
+                    <div class="card-body p-4">
+                        <a class="text-decoration-none link-dark stretched-link" href="#!">
+                            <div class="h5 card-title mb-3">Cocina Internacional:</div>
+                        </a>
+                        <p class="card-text mb-0">Acompáñanos en un viaje culinario alrededor del mundo mientras
+                            exploramos las maravillas de la cocina internacional.
+                            Desde la picante comida tailandesa hasta la reconfortante comida italiana, te guiaremos a
+                            través de recetas auténticas y
+                            técnicas tradicionales.</p>
                     </div>
                     <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                         <div class="d-flex align-items-end justify-content-between">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                                    alt="..." />
-                                <div class="small">
-                                    <div class="fw-bold">Kelly Rowan</div>
-                                    <div class="text-muted">March 12, 2023 &middot; 6 min read</div>
-                                </div>
-                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 mb-5">
                 <div class="card h-100 shadow border-0">
-                    <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
+                    <img class="card-img-top" src="{% static 'img/img5.jpg' %}" alt="..." />
                     <div class="card-body p-4">
-                        <div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>
                         <a class="text-decoration-none link-dark stretched-link" href="#!">
-                            <div class="h5 card-title mb-3">Another blog post title</div>
+                            <div class="h5 card-title mb-3">Tips y Trucos Culinarios:</div>
                         </a>
-                        <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of each
-                            card. Some quick example text to build on the card title and make up the bulk of the card's
-                            content.</p>
-                    </div>
-                    <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                        <div class="d-flex align-items-end justify-content-between">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                                    alt="..." />
-                                <div class="small">
-                                    <div class="fw-bold">Josiah Barclay</div>
-                                    <div class="text-muted">March 23, 2023 &middot; 4 min read</div>
-                                </div>
-                            </div>
-                        </div>
+                        <p class="card-text mb-0">Aprende consejos valiosos para mejorar tus habilidades en la cocina.
+                            Desde técnicas básicas de corte hasta cómo combinar
+                            sabores y texturas, nuestros tips te ayudarán a convertirte en un maestro culinario en tu
+                            propia cocina.</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 mb-5">
                 <div class="card h-100 shadow border-0">
-                    <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..." />
+                    <img class="card-img-top" src="{% static 'img/img6.jpg' %}" alt="..." />
                     <div class="card-body p-4">
-                        <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
                         <a class="text-decoration-none link-dark stretched-link" href="#!">
-                            <div class="h5 card-title mb-3">The last blog post title is a little bit longer than the
-                                others</div>
+                            <div class="h5 card-title mb-3">Postres Irresistibles:</div>
                         </a>
-                        <p class="card-text mb-0">Some more quick example text to build on the card title and make up
-                            the bulk of the card's content.</p>
-                    </div>
-                    <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                        <div class="d-flex align-items-end justify-content-between">
-                            <div class="d-flex align-items-center">
-                                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                                    alt="..." />
-                                <div class="small">
-                                    <div class="fw-bold">Evelyn Martinez</div>
-                                    <div class="text-muted">April 2, 2023 &middot; 10 min read</div>
-                                </div>
-                            </div>
-                        </div>
+                        <p class="card-text mb-0">Déjate tentar por nuestra selección de postres decadentes y
+                            saludables. Descubre cómo endulzar tu vida sin exceso de
+                            azúcar, utilizando ingredientes naturales y técnicas de repostería creativas.</p>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="text-end mb-5 mb-xl-0">
-            <a class="text-decoration-none" href="#!">
-                More stories
-                <i class="bi bi-arrow-right"></i>
-            </a>
+            <div class="col-lg-4 mb-5">
+                <div class="card h-100 shadow border-0">
+                    <img class="card-img-top" src="{% static 'img/img7.jpg' %}" alt="..." />
+                    <div class="card-body p-4">
+                        <a class="text-decoration-none link-dark stretched-link" href="#!">
+                            <div class="h5 card-title mb-3">Comida Rápida y Saludable:</div>
+                        </a>
+                        <p class="card-text mb-0">Para aquellos días ocupados, te ofrecemos recetas rápidas y saludables
+                            para que disfrutes de deliciosas comidas sin
+                            sacrificar el sabor o la calidad de los ingredientes.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
+
+<section class="py-5">
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-12">
+                <h2>Únete a Nuestra Comunidad:</h2>
+                <p class="lead">En Delicias Culinarias, la cocina es un acto de amor y compartir. Nos encantaría que te unas
+                a nuestra comunidad
+                culinaria, donde podrás:</p>
+                <p class="mb-0"><ul>
+                    <li>Compartir tus propias recetas y experiencias culinarias.</li>
+                    <li>Interactuar con otros entusiastas de la cocina.</li>
+                    <li>Participar en concursos y desafíos culinarios.</li>
+                    <li>Mantenerte actualizado con las últimas tendencias y noticias gastronómicas.</li>
+                    <li>No importa si eres un experto en la cocina o un principiante, en Delicias Culinarias hay algo
+                        para todos.</li>                
+                </ul></p>
+                <p class="lead">¡Embárcate en este emocionante viaje culinario y descubre el placer de crear y compartir
+                platos deliciosos!</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 </main>
 
 
