--- a/templates/articulos/listarArticulos.html
+++ b/templates/articulos/listarArticulos.html
@@ -5,164 +5,84 @@
 
 {% block contenido %}
 
-<!-- Page content-->
-<div class="container">
-  <div class="row">
-    <!-- Blog entries-->
-    <div class="col-lg-8">    
-      
-      <!-- Nested row for non-featured blog posts-->
-      <div class="row">
-        <div class="col-lg-6">
-          <!-- Blog post-->
-          <div class="card mb-4">
-            <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg"
-                alt="..." /></a>
-            <div class="card-body">
-              <div class="small text-muted">January 1, 2023</div>
-              <h2 class="card-title h4">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-                nulla.</p>
-              <a class="btn btn-primary" href="#!">Read more →</a>
-            </div>
+    <!-- Page content-->
+    <div class="container">
+      <div class="row">    
+          <div class="col-lg-8"> 
+
+            <section class="py-5">
+              <div class="container px-5">
+                <div class="row gx-5">
+
+                  {% if articulos %}
+                    {% for articulo in articulos %}
+                      <div class="col-lg-6 mb-5">
+                        <div class="card h-100 shadow border-0">
+                          <img class="card-img-top" src="{{ articulo.imagen.url }}" alt="..." />
+                          <div class="card-body p-4">
+                            <a class="text-decoration-none link-dark stretched-link" href="{% url 'articulos:detalleArticulos' articulo.pk %}">
+                              <div class="h5 card-title mb-3">{{ articulo.titulo }}</div>
+                            </a>
+                            <p class="card-text mb-0">{{ articulo.contenido_breve }}</p>
+                          </div>
+                        </div>
+                      </div>
+                    {% endfor %}
+                  {% else %}
+                    <h2>No hay Articulos</h>
+                  {% endif %}
+
+
+                </div>
+              </div>
+            </section>      
           </div>
-          <!-- Blog post-->
-          <div class="card mb-4">
-            <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg"
-                alt="..." /></a>
-            <div class="card-body">
-              <div class="small text-muted">January 1, 2023</div>
-              <h2 class="card-title h4">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-                nulla.</p>
-              <a class="btn btn-primary" href="#!">Read more →</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <!-- Blog post-->
-          <div class="card mb-4">
-            <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg"
-                alt="..." /></a>
-            <div class="card-body">
-              <div class="small text-muted">January 1, 2023</div>
-              <h2 class="card-title h4">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-                nulla.</p>
-              <a class="btn btn-primary" href="#!">Read more →</a>
-            </div>
-          </div>
-          <!-- Blog post-->
-          <div class="card mb-4">
-            <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg"
-                alt="..." /></a>
-            <div class="card-body">
-              <div class="small text-muted">January 1, 2023</div>
-              <h2 class="card-title h4">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque,
-                nulla? Quos cum ex quis soluta, a laboriosam.</p>
-              <a class="btn btn-primary" href="#!">Read more →</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Pagination-->
-      <nav aria-label="Pagination">
-        <hr class="my-0" />
-        <ul class="pagination justify-content-center my-4">
-          <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-          <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-          <li class="page-item"><a class="page-link" href="#!">2</a></li>
-          <li class="page-item"><a class="page-link" href="#!">3</a></li>
-          <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-          <li class="page-item"><a class="page-link" href="#!">15</a></li>
-          <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-        </ul>
-      </nav>
-    </div>
-    <!-- Side widgets-->
+
+    <!-- CATEGORIAS Y FILTROS -->
     <div class="col-lg-4">     
-      
-      <!-- Categories widget-->
-      <div class="card mb-2">
-        <div class="card-header">Categorias</div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-sm-6">
-              <ul class="list-unstyled mb-0">
-                {% for cat in categorias  %}
-                  <li><a class="dropdown-item" href="#!">{{ cat.descripcion}}</a></li>
-                {% endfor %}                
-              </ul>
-            </div>            
-          </div>
-        </div>
-      </div> 
-      <div class="card mb-2">
-        <div class="card-header">Filtros</div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-sm-6">
-              <ul class="list-unstyled mb-0">
-                <li ><strong>Por fecha:</strong></li>
-                <li><a class="dropdown-item" href="?antiguedad_asc=1">ASCENDENTE</a></li>
-                <li><a class="dropdown-item" href="?antiguedad_desc=1">DESCENDENTE</a></li>
-                <hr>
-                <li><strong>Por Título:</strong></li>
-                <li><a class="dropdown-item" href="?orden_asc=1">ASCENDENTE</a></li>
-                <li><a class="dropdown-item" href="?orden_desc=1">DESCENDENTE</a></li>
-              </ul>
+      <div class="container mt-lg-4">
+        <div class="card mb-2">
+          <div class="card-header">Categorias</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-6">
+                <ul class="list-unstyled mb-0">
+                  <li><a class="dropdown-item" href="{% url 'articulos:listarArticulos' %}">Todas</a></li>
+                  {% for cat in categorias  %}
+                    <li><a class="dropdown-item" href="?categoria={{ cat.pk }}">{{ cat.descripcion}}</a></li>
+                  {% endfor %}                
+                </ul>
+              </div>            
             </div>
           </div>
-        </div>
+        </div> 
+        <div class="card mb-2">
+          <div class="card-header">Filtros</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-6">
+                <ul class="list-unstyled mb-0">
+                  <li ><strong>Por fecha:</strong></li>
+                  <li><a class="dropdown-item" href="?antiguedad_asc=1">ASCENDENTE</a></li>
+                  <li><a class="dropdown-item" href="?antiguedad_desc=1">DESCENDENTE</a></li>
+                  <hr>
+                  <li><strong>Por Título:</strong></li>
+                  <li><a class="dropdown-item" href="?orden_asc=1">ASCENDENTE</a></li>
+                  <li><a class="dropdown-item" href="?orden_desc=1">DESCENDENTE</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>      
       </div>
-      
-    </div>
+
   </div>
 </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <h2>Articulos:</h2>
-
-  {% if articulos %}
-    {% for articulo in articulos %}
-    <img src="{{ articulo.imagen.url }}" width="50">
-    <p><a href="{% url 'articulos:detalleArticulos' articulo.pk %}">Titulo: {{ articulo.titulo }}</a></p>
-    <p>Contenido Breve: {{ articulo.contenido_breve }}</p>
-    <p>Contenido Completo: {{ articulo.contenido_completo }}</p>
-    <p>Fecha Publicacion: {{ articulo.fecha_publicacion }}</p>
-    {% if articulo.categoria_articulo is null %}
-      <p>Categoria Articulo: 'Sin categoria'</p>
-    {% else %}
-      <p>Categoria Articulo: {{ articulo.categoria_articulo }}</p>
-    {% endif %}
-    
-    <p>Usuario Articulo: {{ articulo.usuario_articulo }}</p>
-    {% endfor %}
-  {% else %}
-    <h2>No hay Articulos</h>
-  {% endif %}
 {% endblock contenido %}
+
+
+  
+
+  
