--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -1,14 +1,44 @@
 {% extends 'base.html' %}
 {% block titulo %}Login{% endblock titulo %}
 {% block contenido %}
-<form method="POST">{% csrf_token %}
-    {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-danger">{{ message }}</div>
-    {% endfor %}
-    {% endif %}
-    <input type="text" name="username" placeholder="Usuario">
-    <input type="password" name="password" placeholder="Contraseña">
-    <button type="submit">Login</button>
-</form>
+<section class="py-5">
+    <div class="container px-5">
+        <!-- Contact form-->
+        <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
+            <div class="text-center mb-5">
+                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i>
+                </div>
+                <h1 class="fw-bolder">Iniciar Sesión</h1>
+            </div>
+            <div class="row gx-5 justify-content-center">
+                <div class="col-lg-8 col-xl-6">                    
+                    <form method="post">{% csrf_token %}
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-danger">{{ message }}</div>
+                            {% endfor %}
+                        {% endif %}
+                        <!-- Usuario-->
+                        <div class="form-floating mb-3">                            
+                            <input class="form-control" name="username" type="text" placeholder="ingrese su usuario..." />
+                            <label for="username">Usuario</label>
+                        </div>                           
+                        <!-- Contraseña-->
+                        <div class="form-floating mb-3">
+                            <input class="form-control" name="password" type="password" placeholder="Ingrese Contraseña" />
+                            <label for="password">Contraseña</label>
+                        </div>                     
+                        <!-- Submit Button-->
+                        <div class="d-grid"><button type="submit" class="btn btn-primary btn-lg " >Login</button></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
 {% endblock %}
