--- a/templates/usuarios/registro.html
+++ b/templates/usuarios/registro.html
@@ -6,8 +6,7 @@
 
 
 
-<div class="container">
-
+<!-- <div class="container">
     <div class="row justify-content-center">        
         <div class="col-md-6">
             <form action="" method="POST" enctype="multipart/form-data" class="form-group m-4">
@@ -15,7 +14,7 @@
                     <h1>Registarse</h1>
                     <div><b>Para usar la plataforma debe Registrarse</b> </div>
                 </div>
-                <h2>Crea un articulo</h2>
+               
                 <div class="mb-3">
                     {%csrf_token%}
                     {{form.errors}}
@@ -28,7 +27,7 @@
                             <label for="Apellido">Apellido</label>
                             <input type="text" name="last_name" placeholder="Apellido" required>
                         </ul>
-                        <ul>                        <!-- Prueba tipo de usuario -->
+                        <ul>                     
                             <label>Tipo de Usuario:</label>
                             <input type="radio" name="tipo_usuario" value="publico" id="radioPublico" checked="checked">
                             <label for="radioPublico">Público</label>                        
@@ -58,6 +57,65 @@
         </div>
     </div>
 </div>
+ -->
+
+<section class="py-5">
+    <div class="container px-5">
+        <!-- Contact form-->
+        <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
+            <div class="text-center mb-5">
+                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i>
+                </div>
+                <h1 class="fw-bolder">Registrarse</h1>
+            </div>
+            <div class="row gx-5 justify-content-center">
+                <div class="col-lg-8 col-xl-6">
+                    <form method="post">{% csrf_token %}
+                        {% if messages %}
+                        {% for message in messages %}
+                        <div class="alert alert-danger">{{ message }}</div>
+                        {% endfor %}
+                        {% endif %}
+                        {{form.errors}}
+                        
+                        <div class="form-floating mb-3">
+                            <input class="form-control" name="first_name" type="text"
+                                placeholder="Nombre" required />
+                            <label for="first_name">Nombre</label>
+                        </div>
+                        
+                        <div class="form-floating mb-3">
+                            <input class="form-control" name="last_name" type="text"
+                                placeholder="Apellido" required />
+                            <label for="last_name">Apellido</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input class="form-control" name="username" type="text" placeholder="Usuario" required />
+                            <label for="username">Usuario</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input class="form-control" name="email" type="text" placeholder="correo@gmail.com" required />
+                            <label for="email">Email</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" name="password1" type="password" placeholder="Contraseña" required />
+                            <label for="password">Contraseña</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" name="password2" type="password" placeholder="Contraseña" required />
+                            <label for="password">Confirmar contraseña</label>
+                        </div>
+                        <!-- Submit Button-->
+                        <div class="d-grid"><button type="submit" value="registrarse" class="btn btn-primary btn-lg ">Registrar</button></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
 
